--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "jquery": "^3.5.1",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "wow.js": "^1.2.2"
   }
 }
